# Automod-bot

./: .gitignore  Makefile  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: client.yml  lint.yml
apps/automod/: .dockerignore  Dockerfile  nodemon.json  package.json
apps/automod/src/: main.ts
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/automod/: __init__.py  automod.py  caps_lock.py  language.py  max_message_length.py  regex.py  toxicity.py
backend/src/lib/: __init__.py
backend/src/ml/: __init__.py  ml_service.py  toxicity.py  toxicity_service.py
backend/src/routers/: automod_router.py
backend/src/schemas/: __init__.py  automod.py
backend/src/services/automod/: __init__.py  automod.py  language.py  max_message_length.py  message_clean_up.py  rules.py  toxicity.py
backend/src/utils/: __init__.py  config.py
backend/test/: __init__.py  capslock.py  test_capslock_alghoritm.py  test_max_message_length.py
client/: .dockerignore  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
client/apps/automod/: package.json  tsconfig.json
client/apps/bot/: Dockerfile  eslint.config.mjs  package.json  tsconfig.json
client/apps/bot/src/: main.ts
docker/runit/backend/: dev.run  dev.sh  prod.run  prod.sh
docker/runit/client/: dev.sh  prod.sh
nodejs/: package.json
nodejs/apps/bot/: .example.env  package.json  tsup.config.ts
py-backend/: .dockerignore  .example.env
py-backend/src/: main.py
py-backend/src/routers/: __init__.py  automod_router.py
(+88 files in other folders)
